--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "database-backup-cli",
   "version": "1.0.0",
   "description": "CLI utility for backing up a database",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "start": "tsc && node dist/index.js",
+    "dev": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "SegunCodes",
@@ -13,5 +15,10 @@
     "commander": "^12.0.0",
     "mysql": "^2.18.1",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "@types/commander": "^2.12.2",
+    "@types/mysql": "^2.15.26",
+    "ts-node": "^10.9.2"
   }
 }
